--- a/index.html
+++ b/index.html
@@ -120,4 +120,56 @@
   </footer>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Argo Yatırım</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body>
+
+  <!-- Header ve Hero -->
+  <header>
+    <div class="hero-image">
+      <div class="hero-text">
+        <h1>Argo Yatırım Şirketi</h1>
+        <p>Amsterdam & Dubai merkezli uluslararası yatırım şirketi</p>
+      </div>
+    </div>
+  </header>
+
+  <!-- Hakkımızda -->
+  <section id="about">
+    <h2>Hakkımızda</h2>
+    <p>Argo Yatırım, sürdürülebilir büyüme ve etik finansal uygulamalarla global yatırım dünyasında lider olmayı hedefler.</p>
+  </section>
+
+  <!-- Kurucu -->
+  <section id="founder">
+    <h2>Kurucu</h2>
+    <div class="founder-profile">
+      <img src="ufuk-kaplan.jpg" alt="Ufuk Kaplan">
+      <p>Ufuk Kaplan</p>
+    </div>
+  </section>
+
+  <!-- İletişim -->
+  <section id="contact">
+    <h2>İletişim</h2>
+    <p><strong>Amsterdam:</strong> Herengracht 10, 1015 AB Amsterdam, Netherlands</p>
+    <p><strong>Dubai:</strong> Sheikh Zayed Road, Office 205, Dubai, UAE</p>
+    <p><strong>Telefon:</strong> +90 537 052 52 17</p>
+    <p><strong>E-posta:</strong> <a href="mailto:info@argoyatirim.nl">info@argoyatirim.nl</a></p>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Argo Yatırım</p>
+  </footer>
+
+</body>
+</html>
 
