Refactor index.html structure and content
Reorganized sections and updated content in index.html.

--- a/index.html
+++ b/index.html
@@ -4,172 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Argo Yatırım</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header -->
+
+    <!-- Hero Bölümü -->
     <header>
-        <div class="container">
-            <img src="images/logo.png" alt="Argo Yatırım Logo" class="logo">
-            <nav>
-                <a href="#hero">Ana Sayfa</a>
-                <a href="#kurucu">Kurucu</a>
-                <a href="#about">Hakkımızda</a>
-                <a href="#contact">İletişim</a>
-            </nav>
+        <div class="hero-image">
+            <div class="hero-text">
+                <h1>Argo Yatırım Şirketi</h1>
+                <p>Amsterdam & Dubai merkezli uluslararası yatırım şirketi</p>
+            </div>
         </div>
     </header>
 
-    <!-- Hero Section -->
-    <section id="hero" class="hero">
-        <div class="container">
-            <h1>Güvenilir ve Yenilikçi Yatırım Çözümleri</h1>
-            <p>Amsterdam ve Dubai merkezli, uluslararası yatırım şirketi</p>
-            <img src="images/office.jpg" alt="Argo Yatırım Ofisi" class="hero-image">
-        </div>
-    </section>
-
-    <!-- Kurucu Section -->
-    <section id="kurucu" class="kurucu">
-        <div class="container">
-            <h2>Kurucu – Ufuk Kaplan</h2>
-            <div class="kurucu-content">
-                <img src="images/ufuk-kaplan.jpg" alt="Ufuk Kaplan" class="kurucu-img">
-                <p>
-                    Ufuk Kaplan, 36 yaşında ve Hollanda’da yaşamaktadır. Erasmus Üniversitesi Finans Bölümü mezunu olup, aynı üniversitede yüksek lisansını tamamlamıştır. Amsterdam ve Dubai’de kurduğu iki yatırım şirketi ile 125 kişilik profesyonel ekibi ve <strong>200’den fazla yatırımcısıyla</strong> uluslararası ölçekte faaliyet göstermektedir.
-                </p>
-                <p>
-                    Finansal analiz, sermaye yönetimi ve sürdürülebilir büyüme alanlarında uzman olan Kaplan, yatırımcılarına güven, şeffaflık ve istikrarlı kazanç odaklı çözümler sunmaktadır. <strong>Avrupa’da en genç ve en başarılı broker ödülünü kazanan tek Türk broker</strong unvanına sahiptir.
-                </p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Hakkımızda Section -->
-    <section id="about" class="about">
-        <div class="container">
+    <!-- Ana İçerik Bölümü -->
+    <main>
+        <section>
             <h2>Hakkımızda</h2>
-            <p>
-                Argo Yatırım, Amsterdam ve Dubai merkezli, uluslararası ölçekte faaliyet gösteren güçlü bir yatırım şirketidir. Son bir yılda yatırımcılarına <strong>ortalama %65 kazanç</strong> sağlamış ve son 5 ayda Avrupa’nın zirvesine oynayan büyük şirketlere rakip olabilecek seviyeye gelmiştir.
-            </p>
-            <p>
-                125 kişilik profesyonel ekibi ve <strong>200’den fazla yatırımcısıyla</strong>, şeffaf, güvenilir ve uzun vadeli kazanç odaklı çözümler üretmektedir. Sürdürülebilir büyüme ve etik finansal uygulamaları ön planda tutarak, global yatırım dünyasında yenilikçi ve güvenilir bir lider olmayı hedeflemektedir.
-            </p>
-            <img src="images/team.jpg" alt="Argo Yatırım Ekibi" class="about-image">
-        </div>
-    </section>
+            <p>Argo Yatırım, uluslararası alanda yatırım çözümleri sunan yenilikçi bir şirkettir.</p>
+        </section>
 
-    <!-- İletişim Section -->
-    <section id="contact" class="contact">
-        <div class="container">
-            <h2>İletişim</h2>
-            <div class="contact-info">
-                <h3>Amsterdam</h3>
-                <p>Herengracht 10, 1015 AB Amsterdam, Netherlands</p>
-                <h3>Dubai</h3>
-                <p>Sheikh Zayed Road, Office 205, Dubai, UAE</p>
-                <p><strong>Tel:</strong> +90 537 052 52 17</p>
-                <p><strong>E-posta:</strong> info@argoyatirim.nl / info@argoyatirim.ae</p>
-            </div>
-        </div>
-    </section>
+        <section>
+            <h2>Hizmetlerimiz</h2>
+            <ul>
+                <li>Finansal Danışmanlık</li>
+                <li>Portföy Yönetimi</li>
+                <li>Yatırım Stratejileri</li>
+            </ul>
+        </section>
+    </main>
 
     <!-- Footer -->
     <footer>
-        <div class="container">
-            <p>© 2025 Argo Yatırım B.V. Tüm hakları saklıdır.</p>
-        </div>
+        <p>&copy; 2025 Argo Yatırım. Tüm hakları saklıdır.</p>
     </footer>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Argo Yatırım</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-</head>
-<body>
-  <header>
-    <h1>Argo Yatırım Şirketi</h1>
-    <p>Amsterdam & Dubai merkezli uluslararası yatırım şirketi</p>
-  </header>
-
-  <section id="about">
-    <h2>Hakkımızda</h2>
-    <p>Argo Yatırım, sürdürülebilir büyüme ve etik finansal uygulamalarla global yatırım dünyasında lider olmayı hedefler.</p>
-  </section>
-
-  <section id="founder">
-    <h2>Kurucu</h2>
-    <p>Ufuk Kaplan</p>
-  </section>
-
-  <section id="contact">
-    <h2>İletişim</h2>
-    <p><strong>Amsterdam:</strong> Herengracht 10, 1015 AB Amsterdam, Netherlands</p>
-    <p><strong>Dubai:</strong> Sheikh Zayed Road, Office 205, Dubai, UAE</p>
-    <p><strong>Telefon:</strong> +90 537 052 52 17</p>
-    <p><strong>E-posta:</strong> <a href="mailto:info@argoyatirim.nl">info@argoyatirim.nl</a></p>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Argo Yatırım</p>
-  </footer>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Argo Yatırım</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-</head>
-<body>
-
-  <!-- Header ve Hero -->
-  <header>
-    <div class="hero-image">
-      <div class="hero-text">
-        <h1>Argo Yatırım Şirketi</h1>
-        <p>Amsterdam & Dubai merkezli uluslararası yatırım şirketi</p>
-      </div>
-    </div>
-  </header>
-
-  <!-- Hakkımızda -->
-  <section id="about">
-    <h2>Hakkımızda</h2>
-    <p>Argo Yatırım, sürdürülebilir büyüme ve etik finansal uygulamalarla global yatırım dünyasında lider olmayı hedefler.</p>
-  </section>
-
-  <!-- Kurucu -->
-  <section id="founder">
-    <h2>Kurucu</h2>
-    <div class="founder-profile">
-      <img src="ufuk-kaplan.jpg" alt="Ufuk Kaplan">
-      <p>Ufuk Kaplan</p>
-    </div>
-  </section>
-
-  <!-- İletişim -->
-  <section id="contact">
-    <h2>İletişim</h2>
-    <p><strong>Amsterdam:</strong> Herengracht 10, 1015 AB Amsterdam, Netherlands</p>
-    <p><strong>Dubai:</strong> Sheikh Zayed Road, Office 205, Dubai, UAE</p>
-    <p><strong>Telefon:</strong> +90 537 052 52 17</p>
-    <p><strong>E-posta:</strong> <a href="mailto:info@argoyatirim.nl">info@argoyatirim.nl</a></p>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Argo Yatırım</p>
-  </footer>
 
 </body>
 </html>
-
